--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,11 @@
 # Auto detect text files and perform LF normalization
 * text=auto
+target/classes/*
+target/
+*.class
+*.jar
+*.war
+*.ear
+*.logs
+*.iml
+.idea/
